syntax = "proto2";

import "key_version.proto";

option java_outer_classname = "KeyProto";

option java_package = "com.google.k2crypto";

package com.google.k2crypto;

/**
 * Container for the common non-hashed fields of a Key.
 */
message KeyData {
  extensions 10000 to max;

  // Raw bytes that will be hashed with the key version core
  optional bytes core = 1;

  repeated com.google.k2crypto.keyversions.KeyVersionData key_version = 2;
  optional uint32 primary = 3;
}

/**
 * Container for the essential hashed fields of a Key.
 */
message KeyCore {
  extensions 10000 to max;

  // TODO: add security properties of key
}
